--- a/install/config/iris.properties
+++ b/install/config/iris.properties
@@ -1,8 +1,9 @@
 #This file stores configuration options for Iris, such as the currently active shaderpack
-#Mon Jul 22 19:48:45 JST 2024
+#Sun Apr 20 13:05:54 JST 2025
+allowUnknownShaders=false
 colorSpace=SRGB
 disableUpdateMessage=false
 enableDebugOptions=false
 enableShaders=true
 maxShadowRenderDistance=16
-shaderPack=ComplementaryReimagined_r5.3.zip
+shaderPack=ComplementaryReimagined_r5.4.zip
